#1: Final parameters.